fix images not showing

--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ body {
     position: relative;
     &::before {
         content: '';
-        background-image: url(./images/grain.png);
+        background-image: url(images/grain.png);
         position: absolute;
         top: 0;
         bottom: 0;
@@ -199,14 +199,12 @@ header {
     }
     width: 100%;
     .header__image-container {
-        // background-image: url(./images/anivaVeryLarge.jpg);
-        background-image: url(./images/Mask\ lighthouse.png);
+        background-image: url(images/Mask\ lighthouse.png);
         background-repeat: no-repeat;
         position: relative;
         height: 133.9375rem;
         max-width: 100%;
         background-position-x: 100%;
-        // background-position-y: -1385px;
         background-position-y: -86.5625rem;
         filter: grayscale(0.5);
     }
